# auto-applications

./: Cargo.toml  test.html
src/: main.rs
