[package]
name = "auto-applications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
html-stripper = { version = "0.1.0", path = "../html-stripper" }
once_cell = "1.18.0"
openai = "1.0.0-alpha.10"
reqwest = "0.11.18"
scraper = "0.16.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_derive = "1.0.164"
serde_json = "1.0.96"
tokio = "1.28.2"
